sandbox/output
AnagramTest.java:21: error: ')' expected
        assertThat(Anagrams.of("abc"), is(Arrays.asList("abc", "acb", "bac", "bca", "cab", "cba"));
                                                                                                  ^
1 error
